###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "catch2", version = "3.8.1")
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "imgui",
    urls = ["https://github.com/ocornut/imgui/archive/refs/tags/v1.89.1.tar.gz"],
    strip_prefix = "imgui-1.89.1",
    sha256 = "6d02a0079514d869e4b5f8f590f9060259385fcddd93a07ef21298b6a9610cbd",
    build_file = "//:bazel/imgui.BUILD",
)
